--- a/MAIN.html
+++ b/MAIN.html
@@ -4,15 +4,7 @@
   <head>
     <title>Savings Calculator</title>
 
-    <link rel="stylesheet" href="main.CSS" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
-    <link
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet"
-    />
+    <link rel="stylesheet" href="main.css" />
   </head>
 
   <body>
