--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <title>Savings Calculator</title>
 
-    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="index.css" />
   </head>
 
   <body>
@@ -44,6 +44,6 @@
       </tr>
     </table>
 
-    <script src="main.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
